<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.styleomega.LoginActivity">

    <include
        layout="@layout/app_bar_main"
        android:id="@+id/include"></include>


    <android.support.constraint.ConstraintLayout
        android:layout_width="336dp"
        android:layout_height="487dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="83dp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.75"
        tools:layout_editor_absoluteY="147dp">

        <Button
            android:id="@+id/btn_createAccount"
            android:layout_width="400dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:onClick="createAccountButton"
            android:text="@string/btn_createAccount"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="98dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_heading"
            android:textSize="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_enterPassword"
            android:layout_width="340dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="41dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textSize="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enterEmail"
            tools:layout_editor_absoluteX="31dp" />

        <EditText
            android:id="@+id/et_enterEmail"
            android:layout_width="337dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_heading"
            app:layout_constraintHorizontal_bias="0.0"
            tools:layout_editor_absoluteX="29dp" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="135dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:onClick="forgotPasswordLink"
            android:text="@string/link_forgotPassword"
            android:textSize="15dp"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enterPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="403dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:onClick="btnSignIn_click"
            android:text="@string/btn_login"
            android:textSize="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword"
            tools:layout_editor_absoluteX="-8dp" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
