<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.styleomega.ResetPasswordActivity">

    <include
        layout="@layout/app_bar_main" />



        <android.support.constraint.ConstraintLayout
            android:layout_width="353dp"
            android:layout_height="492dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.754">

            <Button
                android:id="@+id/btn_updatePswd"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:layout_marginBottom="-5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:onClick="btnResetPassword_click"
                android:text="@string/btn_updatePassword"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                tools:layout_editor_absoluteX="71dp" />

            <EditText
                android:id="@+id/et_newPswd"
                android:layout_width="323dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/enterNewPswd"
                android:textSize="16dp"
                android:inputType="textPassword"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toTopOf="@+id/et_rnewpswd"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <EditText
                android:id="@+id/et_currentPswd"
                android:layout_width="320dp"
                android:layout_height="43dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/currentPassword"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/et_newPswd"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/et_rnewpswd"
                android:layout_width="327dp"
                android:layout_height="50dp"
                android:ems="10"
                android:textSize="16dp"
                android:hint="@string/renterNewPswd"
                android:inputType="textPassword"
                android:layout_marginBottom="68dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_updatePswd"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.8" />

            <TextView
                android:id="@+id/tv_resetPassword"
                android:layout_width="304dp"
                android:layout_height="45dp"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/resetPassword_heading"
                android:textAlignment="center"
                android:textSize="24dp"
                app:layout_constraintBottom_toTopOf="@+id/et_currentPswd"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.846" />
        </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
