<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.styleomega.ResetForgotPasswordActivity">

    <include
        layout="@layout/app_bar_main" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="470dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="39dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button2"
            android:layout_width="410dp"
            android:layout_height="49dp"
            android:layout_marginBottom="59dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="btnResetForgotPassword"
            android:text="Re-set Password"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/et_rnewpswd"
            android:layout_width="321dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/renterNewPswd"
            android:inputType="textPersonName"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/button2" />

        <EditText
            android:id="@+id/et_newPswd"
            android:layout_width="321dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/enterNewPswd"
            android:inputType="textPersonName"
            android:layout_marginRight="9dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/et_rnewpswd" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="333dp"
            android:layout_height="55dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="17dp"
            android:text="@string/et_heading"
            android:textAlignment="center"
            android:textSize="24dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/et_newPswd"
            app:layout_constraintVertical_bias="0.268" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
